@@ -161,6 +161,8 @@ VP 10.0.0 Changelog
 
 - images/textures transparency is now -only- based on the alpha channel of the loaded images, no transparency color/hack support anymore
 
+- add new PlayHit() and PlaySlingshotHit() function to the bumper / wall. If called the bumper/wall will play the hit animation as if a ball hits the element but without triggering the actual hit event.
+
 - EM Reels do not feature raw Text/Font input anymore, only Images (this was already unsupported in 9.9.X, but is now officially discarded)
 
 - internal DMD support (access via script, input levels are 0..100)
@@ -223,10 +225,12 @@ VP 10.0.0 Changelog
 - support primitive vertex sizes > 65535 and redo primitive drawing in the editor-UI 
   (there is now a new setting for each primitive, set to 0 to switch to the old approximate drawing mode (usually fast),
    1 to draw each and every triangle (usually slow) or inbetween to approximate the outlines of the object (lower values are faster))
+   
 - primitives can optionally be reduced for the use in the physics core (so that highly detailed objects do not cause stutter on collisions)
   by setting the new 'reduce polygons' options (0=no reduction and no slowdown on loading .. 1=high reduction of polygons and slower loading)
 
 - export of the entire table to an .obj file (Menu File -> Export -> OBJ Mesh)
+
 - mesh import dialog added. The options are:
   * "Convert coordinate system" : Converts a mesh to the left handed coordinate system used by DirectX
   * "Center mesh to it's midpoint" : The midpoint(pivot) of a mesh is calculated and the whole mesh is moved so that the midpoint is at the origin (0,0,0)
